# agentic-arbitrage

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  dashboard.py  demo.py  docker-compose.yml  factory.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  constructor.py  midwife.py  mortician.py  red_queen.py
config/: __init__.py  settings.py
core/: __init__.py  models.py  storage.py
docs/superpowers/handoffs/: 2026-04-11-handoff.md
docs/superpowers/plans/: 2026-04-02-uv-migration.md  2026-04-11-ev-charger-incentives-cash-mvp.md
docs/superpowers/specs/: 2026-04-02-uv-migration-design.md
tests/: __init__.py  conftest.py  test_agent_paths.py  test_constructor_next_site.py  test_data_paths.py  test_deployment_adapter.py  test_evidence_storage.py  test_metrics_import.py  test_midwife_deterministic_validation.py  test_models.py  test_mortician_no_fake_metrics.py  test_red_queen_real_mode.py  test_runtime_modes.py  test_status_transitions.py  test_status_truthfulness.py  test_uv_packaging.py
tests/fixtures/: ev_charger_keyword_snapshot.csv
